hphp/hack/test/typecheck/naming_fail_for.php.exp
File "naming_fail_for.php", line 6, characters 8-9:
Variable $x is undefined, or not always defined (Naming[2050])
